[package]
name = "sparrow-realtime"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["json", "aio", "tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
fcm = "0.9"
async-trait="0.1"
firebase-rs = "2.0"
thiserror = "1.0"
rand = "0.9.2"
nanoid = "0.4.0"
